# video

./: .gitignore  DEBUGGING_GUIDE.md  Dockerfile  HOW_TO_SAVE_AND_UPLOAD.md  LICENSE  QUICKSTART.md  README.md  RESTRUCTURE_SUMMARY.md  debug_all_services.bat  docker-compose.yml  docker-entrypoint.sh  monitor_services.ps1  playground.ipynb  pyproject.toml  quick-start.md  requirements.txt  setup.py  simple_api_server.py  start-all-services.sh  start_simple.bat  start_with_logging.bat  start_with_logging.ps1  stop-all-services.sh  test_frontend.bat  test_server.bat  train.py
configs/: deepspeed_zero2.json  qwen25_3b_qlora.yaml  qwen25_3b_qlora_backup.yaml  qwen25_3b_qlora_frequent_saves.yaml
data/: dataset_info.json
data/samples/: sample_0_data.json  sample_0_info.json  sample_1_data.json  sample_1_info.json  sample_2_data.json  sample_2_info.json  sample_3_info.json  sample_4_info.json
docs/: README.md
docs/api/: field-extraction.md
docs/developer-guide/: camera-detection.md
docs/user-guide/: frontend-quickstart.md
frontend/: .gitignore  README.md  package-lock.json  package.json  start.js  tailwind.config.js
frontend/public/: index.html
frontend/python-integration/: nameplate_service.py  test_service.py
frontend/server/: package-lock.json  package.json  python-bridge.js  server.js
frontend/src/: App.css  App.js  SimpleNameplateDetector.js
notebooks/: dataset_exploration.ipynb  inference_demo.ipynb
saved_models/kahua-invoice-ocr/: README.md  training_info.json
saved_models/qwen25-vl-invoice-config/: README.md  generation_config.json  training_info.json
scripts/: convert_checkpoint.py  predict_nameplate.py  prepare_dataset.py  quickstart_camera.py  run_nameplate_detector.py  save_current_training.py  save_from_memory.py  save_model.py  upload_to_hf.py  validate_setup.py
src/: __init__.py
src/models/: __init__.py
src/nameplate_detector/: __init__.py  cli.py
src/nameplate_detector/api/: __init__.py  inference.py  server.py
src/nameplate_detector/config/: __init__.py  settings.py
src/nameplate_detector/detection/: __init__.py  camera.py  detector.py  field_extractor.py
src/nameplate_detector/models/: __init__.py  classifier.py
src/nameplate_detector/utils/: __init__.py  helpers.py
src/training/: __init__.py
src/utils/: __init__.py
tests/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_utils.py
